--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,3 +1,6 @@
+*{
+    font-family: poppins;
+}
 #projects{
     margin: 0 auto;
     width: 100%;
@@ -15,10 +18,10 @@
 }
 .projects-desc{
     font-size: 1.2rem;
-    font-weight: 200;
+    font-weight: 300;
     letter-spacing: 1px;
     max-width: 45rem;
-    padding-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .projects-imgs{
