--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -6,6 +6,9 @@
     font-family: poppins;
     src: url(../../assets/Poppins-Black.ttf);
 }
+*{
+    font-family: poppins;
+}
 #skills{
     width: 100%;
     display: flex;
@@ -17,7 +20,6 @@
 }
 
 .skills-title{
-    font-family: poppins;
     font-size: 3rem;
     font-weight: 600;
     padding-top: 3rem;
@@ -27,7 +29,7 @@
 
 .skills-desc{
     font-size: 1.2rem;
-    font-weight: 200;
+    font-weight: 300;
     letter-spacing: 1px;
     max-width: 50rem;
     padding: 0 2rem;
