--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: norwester;
+  src: url(./assets/norwester.otf);
+}
+@font-face {
+  font-family: poppins;
+  src: url(./assets/Poppins-Black.ttf);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
