--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -16,7 +16,6 @@
     color: #1cd760;
 }
 .contact-desc{
-    padding: 1rem;
     font-size: 1.2rem;
     font-weight: 600;
 }
@@ -31,6 +30,7 @@
 }
 
  .name, .email, .msg{
+   font-weight: 300;
     font-size: medium;
     width: 100%;
     max-width: 40rem;
